--- a/index.html
+++ b/index.html
@@ -13,3 +13,9 @@
   <p>공정하고 건강한 팬문화를 지향합니다.</p>
 </body>
 </html>
+
+
+index.html          ← 메인 (소개 + 메뉴)
+about.html          ← 대복자에 대한 소개
+achievements.html   ← 대복자의 업적
+disciples.html      ← 대복자의 수제자
