--- a/index.html
+++ b/index.html
@@ -4,18 +4,66 @@
   <meta charset="UTF-8">
   <title>대복자 억까방지협회</title>
   <style>
-    body { font-family: sans-serif; text-align: center; margin-top: 80px; }
-    h1 { color: #333; }
+    body {
+      font-family: sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f5f5f5;
+    }
+    header {
+      background-color: #004aad;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+    nav {
+      background-color: #0066ff;
+      display: flex;
+      justify-content: center;
+      padding: 10px 0;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 15px;
+      font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    main {
+      padding: 40px;
+      text-align: center;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      background-color: #004aad;
+      color: white;
+      margin-top: 40px;
+    }
   </style>
 </head>
 <body>
-  <h1>대복자 억까방지협회</h1>
-  <p>공정하고 건강한 팬문화를 지향합니다.</p>
+  <header>
+    <h1>대복자 억까방지협회</h1>
+    <p>공정하고 건강한 팬문화를 지향합니다.</p>
+  </header>
+
+  <nav>
+    <a href="about.html">대복자 소개</a>
+    <a href="achievements.html">대복자의 업적</a>
+    <a href="disciples.html">대복자의 수제자</a>
+  </nav>
+
+  <main>
+    <h2>환영합니다!</h2>
+    <p>대복자 억까방지협회 공식 홈페이지에 오신 것을 환영합니다.</p>
+  </main>
+
+  <footer>
+    © 2025 대복자 억까방지협회
+  </footer>
 </body>
 </html>
 
-
-index.html          ← 메인 (소개 + 메뉴)
-about.html          ← 대복자에 대한 소개
-achievements.html   ← 대복자의 업적
-disciples.html      ← 대복자의 수제자
