--- a/about.html
+++ b/about.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+  <nav>
+  <a href="index.html">홈</a>
+  <a href="about.html">대복자 소개</a>
+  <a href="achievements.html">대복자의 업적</a>
+  <a href="disciples.html">대복자의 수제자</a>
+  <a href="episodes.html">대복자의 에피소드</a>
+</nav>
+
   <meta charset="UTF-8">
   <title>대복자 소개 - 대복자 억까방지협회</title>
   <style>
