--- a/index.html
+++ b/index.html
@@ -1,77 +1,33 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <nav>
-  <a href="index.html">홈</a>
-  <a href="about.html">대복자 소개</a>
-  <a href="achievements.html">대복자의 업적</a>
-  <a href="disciples.html">대복자의 수제자</a>
-  <a href="episodes.html">대복자의 에피소드</a>
-</nav>
-
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <title>대복자 억까방지협회</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body {
-      font-family: sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f5f5f5;
-    }
-    header {
-      background-color: #004aad;
-      color: white;
-      padding: 20px;
-      text-align: center;
-    }
-    nav {
-      background-color: #0066ff;
-      display: flex;
-      justify-content: center;
-      padding: 10px 0;
-    }
-    nav a {
-      color: white;
-      text-decoration: none;
-      margin: 0 15px;
-      font-weight: bold;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    main {
-      padding: 40px;
-      text-align: center;
-    }
-    footer {
-      text-align: center;
-      padding: 20px;
-      background-color: #004aad;
-      color: white;
-      margin-top: 40px;
-    }
+    body { font-family: system-ui, sans-serif; margin: 0; background: #f5f5f5; color: #111; }
+    header { background: #004aad; color: white; text-align: center; padding: 18px 0; }
+    nav { background: #0066ff; display: flex; justify-content: center; gap: 18px; padding: 10px 0; }
+    nav a { color: white; text-decoration: none; font-weight: bold; }
+    main { max-width: 900px; margin: 0 auto; padding: 40px; text-align: center; }
+    footer { background: #004aad; color: white; text-align: center; padding: 14px; margin-top: 24px; }
   </style>
 </head>
 <body>
-  <header>
-    <h1>대복자 억까방지협회</h1>
-    <p>공정하고 건강한 팬문화를 지향합니다.</p>
-  </header>
-
+  <header><h1>대복자 억까방지협회</h1></header>
   <nav>
+    <a href="index.html">홈</a>
     <a href="about.html">대복자 소개</a>
     <a href="achievements.html">대복자의 업적</a>
     <a href="disciples.html">대복자의 수제자</a>
+    <a href="episodes.html">대복자의 에피소드</a>
   </nav>
 
   <main>
     <h2>환영합니다!</h2>
-    <p>대복자 억까방지협회 공식 홈페이지에 오신 것을 환영합니다.</p>
+    <p>대복자 억까방지협회는 대복자 교수님의 업적을 알리고, 근거 없는 비난으로부터 그 명예를 지키기 위해 설립되었습니다.</p>
   </main>
 
-  <footer>
-    © 2025 대복자 억까방지협회
-  </footer>
+  <footer>© 2025 대복자 억까방지협회</footer>
 </body>
 </html>
-
