--- a/about.html
+++ b/about.html
@@ -1,82 +1,35 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <nav>
-  <a href="index.html">홈</a>
-  <a href="about.html">대복자 소개</a>
-  <a href="achievements.html">대복자의 업적</a>
-  <a href="disciples.html">대복자의 수제자</a>
-  <a href="episodes.html">대복자의 에피소드</a>
-</nav>
-
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <title>대복자 소개 - 대복자 억까방지협회</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body {
-      font-family: sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f5f5f5;
-    }
-    header {
-      background-color: #004aad;
-      color: white;
-      padding: 20px;
-      text-align: center;
-    }
-    nav {
-      background-color: #0066ff;
-      display: flex;
-      justify-content: center;
-      padding: 10px 0;
-    }
-    nav a {
-      color: white;
-      text-decoration: none;
-      margin: 0 15px;
-      font-weight: bold;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    main {
-      padding: 40px;
-      max-width: 800px;
-      margin: auto;
-      line-height: 1.6;
-    }
-    footer {
-      text-align: center;
-      padding: 20px;
-      background-color: #004aad;
-      color: white;
-      margin-top: 40px;
-    }
+    body { font-family: system-ui, sans-serif; margin: 0; background: #f5f5f5; color: #111; }
+    header { background: #004aad; color: white; text-align: center; padding: 18px 0; }
+    nav { background: #0066ff; display: flex; justify-content: center; gap: 18px; padding: 10px 0; }
+    nav a { color: white; text-decoration: none; font-weight: bold; }
+    main { max-width: 900px; margin: 0 auto; padding: 40px; }
+    footer { background: #004aad; color: white; text-align: center; padding: 14px; margin-top: 24px; }
   </style>
 </head>
 <body>
-  <header>
-    <h1>대복자 억까방지협회</h1>
-  </header>
-
+  <header><h1>대복자 억까방지협회</h1></header>
   <nav>
     <a href="index.html">홈</a>
     <a href="about.html">대복자 소개</a>
     <a href="achievements.html">대복자의 업적</a>
     <a href="disciples.html">대복자의 수제자</a>
+    <a href="episodes.html">대복자의 에피소드</a>
   </nav>
 
   <main>
-    <h2>대복자 소개</h2>
-    <p>
-      대복자란, 현재 운동재활학과 학과장 교수로 역임하고 있는 대복자 교수님을 칭한다.
-      현재 그는 재학생 신x빈 등 많은 이들의 억까를 받고 있지만, 그럼에도 불구하고
-      대복자의 업적을 널리 알려 억까를 막고자 하는 것이 본 협회의 목적이다.
-    </p>
+    <h2>대복자란 누구인가</h2>
+    <p>현재 운동재활학과 학과장 교수로 역임하고 있는 대복자 교수님을 칭한다.<br>
+    그는 재학생 신○빈 등 여러 이들의 억까를 받는 중이지만, 그럼에도 불구하고 대복자의 업적을 널리 알려
+    억까를 막고자 하는 것이 본 협회의 목적이다.</p>
   </main>
 
-  <footer>
-    © 2025 대복자 억까방지협회
-  </footer>
+  <footer>© 2025 대복자 억까방지협회</footer>
 </body>
 </html>
