--- a/episodes.html
+++ b/episodes.html
@@ -5,42 +5,12 @@
   <title>대복자의 에피소드 - 대복자 억까방지협회</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body {
-      font-family: system-ui, sans-serif;
-      background: #f5f5f5;
-      color: #111;
-      margin: 0;
-    }
-    header {
-      background: #004aad;
-      color: white;
-      text-align: center;
-      padding: 18px 0;
-    }
-    nav {
-      background: #0066ff;
-      display: flex;
-      justify-content: center;
-      gap: 18px;
-      padding: 10px 0;
-    }
-    nav a {
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    main {
-      max-width: 900px;
-      margin: 0 auto;
-      padding: 40px;
-    }
-    footer {
-      background: #004aad;
-      color: white;
-      text-align: center;
-      padding: 14px;
-      margin-top: 24px;
-    }
+    body { font-family: system-ui, sans-serif; margin: 0; background: #f5f5f5; color: #111; }
+    header { background: #004aad; color: white; text-align: center; padding: 18px 0; }
+    nav { background: #0066ff; display: flex; justify-content: center; gap: 18px; padding: 10px 0; }
+    nav a { color: white; text-decoration: none; font-weight: bold; }
+    main { max-width: 900px; margin: 0 auto; padding: 40px; }
+    footer { background: #004aad; color: white; text-align: center; padding: 14px; margin-top: 24px; }
   </style>
 </head>
 <body>
@@ -55,9 +25,10 @@
 
   <main>
     <h2>대복자의 에피소드</h2>
-    <p>여기에 대복자 교수님의 강의 중 일화, 학생들과의 재미있는 이야기, 혹은 감동적인 순간들을 기록할 수 있습니다.</p>
+    <p>대복자 교수님의 강의 중 일화, 학생들과의 재미있는 순간, 감동적인 장면들을 여기에 모을 예정입니다.</p>
   </main>
 
   <footer>© 2025 대복자 억까방지협회</footer>
 </body>
 </html>
+
